added ktlint maven plugin